--- a/projects/prem_league/notebooks/4-lk-home_scores_more.ipynb
+++ b/projects/prem_league/notebooks/4-lk-home_scores_more.ipynb
@@ -160,7 +160,7 @@
     "\n",
     "$\\mu = \\mu_{H} \\simeq \\overline{X}_{H} \\simeq 1.57$;\n",
     "\n",
-    "$\\mu_{0} \\simeq \\mu_{A} \\simeq \\overline{X}_{A} \\simeq  1.25$;\n",
+    "$\\mu_{0} = \\mu_{A} \\simeq \\overline{X}_{A} \\simeq  1.25$;\n",
     "\n",
     "$S = S_{A} \\simeq 1.18$;\n",
     "\n",
