--- a/projects/prem_league/notebooks/2-lk-poisson_process.ipynb
+++ b/projects/prem_league/notebooks/2-lk-poisson_process.ipynb
@@ -186,7 +186,8 @@
     "Finally in this subsection we perform a chi-squared goodness-of-fit test.\n",
     "Let the null hypothesis be that the number of goals per game can be modelled by a **Poisson**(2.8) distribution.\n",
     "\n",
-    "A table of results for the chi-squared goodness-of-fit test is shown below."
+    "A table of results for the chi-squared goodness-of-fit test is shown below.\n",
+    "Note that games where there were 7 or more goals scored are combined into a single category (7+) to ensure that all expected values are greater than or equal to 5."
    ]
   },
   {
@@ -222,8 +223,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that games where there were 7 or more goals scored are combined into a single category (7+) to ensure that all expected values are greater than or equal to 5.\n",
-    "\n",
     "The value of the chi-squared goodness-of-fit test statistic is approximately 3.40."
    ]
   },
@@ -252,8 +251,6 @@
    "metadata": {},
    "source": [
     "There are $k=8$ categories and we estimated one parameter ($\\overline{X}$), so there are 6 degrees of freedom and the appropiate null distribution is $\\chi^{2}(6)$.\n",
-    "\n",
-    "Games where there were 7 goals and more scored are combined into a single category (7+) to ensure that all expected values are greater than or equal to 5.\n",
     "\n",
     "Taken all together, this gives us a $p$-value approximately 0.69."
    ]
@@ -399,8 +396,7 @@
     "Let the null hypothesis be that the waiting time between goals per game can be modelled by an $M(31.9)$ distribution.\n",
     "\n",
     "A table of results for testing the hypothesis was constructued and is reported below.\n",
-    "\n",
-    "Waiting times of more than 90 minutes were combined into a single category (90+) to ensure that all exprected frequenceies were $\\geq$ 5."
+    "Note that waiting times of more than 90 minutes are combined into a single category (90+) to ensure that all exprected frequenceies were $\\geq$ 5."
    ]
   },
   {
