--- a/projects/prem_league/notebooks/3-lk-goals_uniform.ipynb
+++ b/projects/prem_league/notebooks/3-lk-goals_uniform.ipynb
@@ -118,9 +118,7 @@
   },
   {
    "source": [
-    "A table of results for testing the hypothesis was constrcutued and is reported below.\n",
-    "\n",
-    "We note that we do not need to combine categories as all reported expected frequences are $\\geq$ 5."
+    "A table of results for testing the hypothesis is reported below."
    ],
    "cell_type": "markdown",
    "metadata": {}
