--- a/projects/prem_league/notebooks/4-lk-home_scores_more.ipynb
+++ b/projects/prem_league/notebooks/4-lk-home_scores_more.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "## 3. Results\n",
     "\n",
-    "A sumamary table of results is shown below."
+    "A summary table of results is shown below."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -150,7 +150,7 @@
   },
   {
    "source": [
-    "We require the $z$-valueTo perform a $z$-test, which is defined as\n",
+    "We require the $z$-value to perform a $z$-test, which is defined as\n",
     "\n",
     "$$\n",
     "Z = \\frac{\\mu - \\mu_{0}}{S/\\sqrt{n}}.\n",
@@ -174,7 +174,7 @@
     "Z \\simeq \\frac{\\overline{X}_{H} - \\overline{X}_{A}}{S_{A}/\\sqrt{n}}.\n",
     "$$\n",
     "\n",
-    "This will give us a $z$-value of approximately 5.22."
+    "This gives us a $z$-value of approximately 5.22."
    ],
    "cell_type": "markdown",
    "metadata": {}
