--- a/projects/prem_league/notebooks/2-lk-poisson_process.ipynb
+++ b/projects/prem_league/notebooks/2-lk-poisson_process.ipynb
@@ -500,7 +500,7 @@
     "\n",
     "We would expect the rate of goals scored to be constant throughout the season.\n",
     "\n",
-    "A scatterplot showing the global goal time (timed as if the games were played in sweries, rather than parallel) against the goal id is plotted below."
+    "A scatterplot showing the global goal time (timed as if the games were played in series, rather than parallel) against the goal id is plotted below."
    ]
   },
   {
