--- a/projects/prem_league/notebooks/1_setup/03-lk-out_goal_times.ipynb
+++ b/projects/prem_league/notebooks/1_setup/03-lk-out_goal_times.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.03 Data processing: goal_times\n",
+    "# 3. Data processing: goal_times\n",
     "\n",
     "~~~\n",
     "THIS NEEDS TO BE REFACTORED\n",
@@ -33,8 +33,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from src.data import Data\n",
-    "from src.list_comprehension import ListComprehension"
+    "from setup.data import Data\n",
+    "from setup.list_comprehension import ListComprehension"
    ]
   },
   {
@@ -114,7 +114,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Help on function transform_str_to_list_str in module src.list_comprehension:\n\ntransform_str_to_list_str(a_list: list) -> list\n    For each str in the list, if the string is not nan\n    then separate the comma separated str to a list of strings.\n    \n    @param, a_list: list(str)\n        a list of strings, where each string contains a comma\n        separated string of goal times.\n        Example: [\"3,10,85\", \"5, 64\", \"23\"]\n    \n    @returns, list(list(str))\n        a list of lists of strings\n        Example: [[\"3\", \"10\", \"85\"], [\"5\", \"64\"], [\"23\"]]\n\n"
+      "Help on function transform_str_to_list_str in module setup.list_comprehension:\n\ntransform_str_to_list_str(a_list: list) -> list\n    For each str in the list, if the string is not nan\n    then separate the comma separated str to a list of strings.\n    \n    @param, a_list: list(str)\n        a list of strings, where each string contains a comma\n        separated string of goal times.\n        Example: [\"3,10,85\", \"5, 64\", \"23\"]\n    \n    @returns, list(list(str))\n        a list of lists of strings\n        Example: [[\"3\", \"10\", \"85\"], [\"5\", \"64\"], [\"23\"]]\n\n"
      ]
     }
    ],
@@ -166,7 +166,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Help on function recast_numeral_to_int in module src.list_comprehension:\n\nrecast_numeral_to_int(lists: list) -> list\n    For each list in lists, and then for each numeral in the list,\n    if the string is not NaN, then recast the numeral to an int.\n    \n    @param, list_strings, list(list(str))\n        list of lists(str), where each element of the sub-list is\n        a numeral representing the match time when a goal was\n        scored.\n        Example: [[\"3\", \"10\", \"85\"], [\"5\", \"64\"], [\"23\"]]\n    \n    @returns, list(list(int))\n        Example: [[3, 10, 85], [5, 64], [23]]\n\n"
+      "Help on function recast_numeral_to_int in module setup.list_comprehension:\n\nrecast_numeral_to_int(lists: list) -> list\n    For each list in lists, and then for each numeral in the list,\n    if the string is not NaN, then recast the numeral to an int.\n    \n    @param, list_strings, list(list(str))\n        list of lists(str), where each element of the sub-list is\n        a numeral representing the match time when a goal was\n        scored.\n        Example: [[\"3\", \"10\", \"85\"], [\"5\", \"64\"], [\"23\"]]\n    \n    @returns, list(list(int))\n        Example: [[3, 10, 85], [5, 64], [23]]\n\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Help on function merge_lists in module src.list_comprehension:\n\nmerge_lists(first_lists: list, second_lists: list) -> list\n    Merges the elements of lists1 and lists2.\n    \n    @param, first_lists, list(list(int))\n        Each element of list is a list of ints, where each elem is\n        an int representing the match time when a goal was scored.\n        Example: [[3, 10, 85], [5, 64]]\n    \n    @param, second_lists, list(list(int))\n        Same description.\n        Example: [[25], [79]]\n    \n    @returns, list(list(int))\n        a combined list of lists of ints\n        Example: [[3, 10, 85, 25], [5, 64, 79]]\n\n"
+      "Help on function merge_lists in module setup.list_comprehension:\n\nmerge_lists(first_lists: list, second_lists: list) -> list\n    Merges the elements of lists1 and lists2.\n    \n    @param, first_lists, list(list(int))\n        Each element of list is a list of ints, where each elem is\n        an int representing the match time when a goal was scored.\n        Example: [[3, 10, 85], [5, 64]]\n    \n    @param, second_lists, list(list(int))\n        Same description.\n        Example: [[25], [79]]\n    \n    @returns, list(list(int))\n        a combined list of lists of ints\n        Example: [[3, 10, 85, 25], [5, 64, 79]]\n\n"
      ]
     }
    ],
@@ -249,14 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Help on function sort_lists in module src.list_comprehension:\n\nsort_lists(lists: list) -> list\n    Orders each sub-list of a list of lists in ascending order.\n    \n    @param, lists, list(list(int))\n        a list of lists of unsorted ints\n        Example: [[85, 25], [5, 64, 35]]\n    \n    @returns, list(list(int))\n        a list of lists of sorted ints\n        Example: [[25, 85], [5, 35, 64]]\n\n"
+      "Help on function sort_lists in module setup.list_comprehension:\n\nsort_lists(lists: list) -> list\n    Orders each sub-list of a list of lists in ascending order.\n    \n    @param, lists, list(list(int))\n        a list of lists of unsorted ints\n        Example: [[85, 25], [5, 64, 35]]\n    \n    @returns, list(list(int))\n        a list of lists of sorted ints\n        Example: [[25, 85], [5, 35, 64]]\n\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Help on function create_linked_lists in module src.list_comprehension:\n\ncreate_linked_lists(lists: list) -> tuple\n    Returns a tuple of linked lists. They are linked in the sense\n    that elem `i` in both lists\n    are related.\n    \n    @param, lists, list(list(int))\n        a list of lists of sorted ints\n        Example: [[25, 85], [5, 35, 64]]\n    \n    @returns, (list(int), list(int))\n        tuple of lists of ints\n\n"
+      "Help on function create_linked_lists in module setup.list_comprehension:\n\ncreate_linked_lists(lists: list) -> tuple\n    Returns a tuple of linked lists. They are linked in the sense\n    that elem `i` in both lists are related.\n    \n    @param, lists, list(list(int))\n        a list of lists of sorted ints\n        Example: [[25, 85], [5, 35, 64]]\n    \n    @returns, (list(int), list(int))\n        tuple of lists of ints\n\n"
      ]
     }
    ],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,13 +353,13 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": null,
+   "execution_count": 20,
    "outputs": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python38264bit42cc30f2071844968108c09d90e27cee",
+   "name": "python383jvsc74a57bd0ff1f241afc5a4c2e07811e38e6858495d05af165b3766e4314a3d7953c54c6af",
    "display_name": "Python 3.8.3 64-bit"
   },
   "language_info": {
