--- a/projects/prem_league/notebooks/1_setup/05-lk-out_waiting_time_goals.ipynb
+++ b/projects/prem_league/notebooks/1_setup/05-lk-out_waiting_time_goals.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.5 Constructing data: waiting_times_goals.csv\n",
+    "# 5. Constructing data: waiting_times_goals.csv\n",
     "\n",
     "**date**\n",
     ": 2021-04-11\n",
@@ -27,7 +27,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from src.data import Data"
+    "from setup.data import Data"
    ]
   },
   {
