--- a/projects/prem_league/notebooks/1_setup/06-lk-out_goals_per_game_chi_sq.ipynb
+++ b/projects/prem_league/notebooks/1_setup/06-lk-out_goals_per_game_chi_sq.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.6 Constructing data: goals_per_game_chi_sq\n",
+    "# 6. Constructing data: goals_per_game_chi_sq\n",
     "\n",
     "**date**\n",
     ": 2021-04-11\n",
@@ -29,7 +29,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.stats import poisson\n",
-    "from src.data import Data"
+    "from setup.data import Data"
    ]
   },
   {
