--- a/projects/prem_league/notebooks/1_setup/09-lk-out_uniform_goals_chi_sq.ipynb
+++ b/projects/prem_league/notebooks/1_setup/09-lk-out_uniform_goals_chi_sq.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.7 Constructing data: waiting_time_chi_sq.csv\n",
+    "# 9 Constructing data: waiting_time_chi_sq.csv\n",
     "\n",
     "**date**\n",
     ": 2021-04-12\n",
@@ -21,21 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.stats import expon\n",
-    "from src.data import Data\n",
-    "from src.uniformgoals import UniformGoals\n",
-    "from src.list_comprehension import ListComprehension"
+    "from setup.data import Data\n",
+    "from setup.support import add_bandings_uniform_goals\n",
+    "from setup.list_comprehension import ListComprehension"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>total_goal_count</th>\n      <th>home_team_goal_timings</th>\n      <th>away_team_goal_timings</th>\n      <th>game_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3</td>\n      <td>3,83</td>\n      <td>90'2</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>3</td>\n      <td>11</td>\n      <td>8,18</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>24,90'1</td>\n      <td>NaN</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2</td>\n      <td>NaN</td>\n      <td>41,79</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3</td>\n      <td>NaN</td>\n      <td>34,45,80</td>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 18
     }
    ],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +172,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "int_goal_times = ListComprehension.list_str_to_list_int(\n",
+    "int_goal_times = ListComprehension.recast_numeral_to_int(\n",
     "    cleaned_goal_times\n",
     ")"
    ]
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,17 +229,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Help on function add_bandings_uniform_goals in module setup.support:\n\nadd_bandings_uniform_goals(x: int) -> str\n    Returns banding of X, defined as the nearest multiple of 10.\n    \n    -  If x is 0, then set x to 10.\n    -  Otherwise, while the remainder of x/10 is not 0, increment\n    x by 1.\n    \n    @param, x, int\n        an integer representing the waiting time before a goal is\n        scored.\n    \n    @return, int\n        the nearest greater multiple of 10\n\n"
+     ]
+    }
+   ],
    "source": [
-    "# code the values, bounding them in groups of 10\n",
-    "df_chi_sq[\"time_banding\"] = df_chi_sq[\"goal_times\"].apply(UniformGoals.get_banding)"
+    "help(add_bandings_uniform_goals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code the values, bounding them in groups of 10\n",
+    "df_chi_sq[\"time_banding\"] = df_chi_sq[\"goal_times\"].apply(add_bandings_uniform_goals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,28 +293,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "  time_banding  Observed        Pr    Expected  chi-sq contribution\n",
-       "0           10        82  0.111111  108.666667             6.543967\n",
-       "1           20       116  0.111111  108.666667             0.494888\n",
-       "2           30       108  0.111111  108.666667             0.004090\n",
-       "3           40        98  0.111111  108.666667             1.047035\n",
-       "4           50        95  0.111111  108.666667             1.718814\n",
-       "5           60       112  0.111111  108.666667             0.102249\n",
-       "6           70       133  0.111111  108.666667             5.448875\n",
-       "7           80       119  0.111111  108.666667             0.982618\n",
-       "8           90       115  0.111111  108.666667             0.369121"
+       "  time_banding  Observed\n",
+       "0           10        82\n",
+       "1           20       116\n",
+       "2           30       108\n",
+       "3           40        98\n",
+       "4           50        95\n",
+       "5           60       112\n",
+       "6           70       133\n",
+       "7           80       119\n",
+       "8           90       115"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time_banding</th>\n      <th>Observed</th>\n      <th>Pr</th>\n      <th>Expected</th>\n      <th>chi-sq contribution</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10</td>\n      <td>82</td>\n      <td>0.111111</td>\n      <td>108.666667</td>\n      <td>6.543967</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>20</td>\n      <td>116</td>\n      <td>0.111111</td>\n      <td>108.666667</td>\n      <td>0.494888</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>30</td>\n      <td>108</td>\n      <td>0.111111</td>\n      <td>108.666667</td>\n      <td>0.004090</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>40</td>\n      <td>98</td>\n      <td>0.111111</td>\n      <td>108.666667</td>\n      <td>1.047035</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>50</td>\n      <td>95</td>\n      <td>0.111111</td>\n      <td>108.666667</td>\n      <td>1.718814</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>60</td>\n      <td>112</td>\n      <td>0.111111</td>\n      <td>108.666667</td>\n      <td>0.102249</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>70</td>\n      <td>133</td>\n      <td>0.111111</td>\n      <td>108.666667</td>\n      <td>5.448875</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>80</td>\n      <td>119</td>\n      <td>0.111111</td>\n      <td>108.666667</td>\n      <td>0.982618</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>90</td>\n      <td>115</td>\n      <td>0.111111</td>\n      <td>108.666667</td>\n      <td>0.369121</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time_banding</th>\n      <th>Observed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10</td>\n      <td>82</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>20</td>\n      <td>116</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>30</td>\n      <td>108</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>40</td>\n      <td>98</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>50</td>\n      <td>95</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>60</td>\n      <td>112</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>70</td>\n      <td>133</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>80</td>\n      <td>119</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>90</td>\n      <td>115</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 33
     }
    ],
    "source": [
@@ -314,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,13 +380,13 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 28,
+   "execution_count": 37,
    "outputs": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python38264bit42cc30f2071844968108c09d90e27cee",
+   "name": "python383jvsc74a57bd0ff1f241afc5a4c2e07811e38e6858495d05af165b3766e4314a3d7953c54c6af",
    "display_name": "Python 3.8.3 64-bit"
   },
   "language_info": {
