--- a/projects/prem_league/notebooks/1_setup/10-lk-out-home_advantage.ipynb
+++ b/projects/prem_league/notebooks/1_setup/10-lk-out-home_advantage.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "source": [
-    "# 1.7 Constructing data: waiting_time_chi_sq.csv\n",
+    "# 10 Constructing data: waiting_time_chi_sq.csv\n",
     "\n",
     "**date**\n",
     ": 2021-04-12\n",
@@ -49,7 +49,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.stats import expon\n",
-    "from src.data import Data"
+    "from setup.data import Data"
    ]
   },
   {
