--- a/projects/prem_league/notebooks/4-lk-home_scores_more.ipynb
+++ b/projects/prem_league/notebooks/4-lk-home_scores_more.ipynb
@@ -37,22 +37,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.hometeamsadvantage import HomeAdvantage"
+    "from src.home_scores_more import HomeAdvantage"
    ]
   },
   {
    "source": [
-    "The source data was taken from [FootyStats](https://footystats.org/stats) and is concerned with the English Premier League 2018/19 season.\n",
-    "The source data can be found in the `data/in` folder.\n",
-    "The processed data used in this modelling can be found in `data/out/home_advantage.csv`.\n",
-    "\n",
-    "**Updates**\n",
+    "## Updates\n",
     "\n",
     "**2021-04-14**\n",
     ": I was using the incorrect **ESE** for the test.\n",
     "After consulting **M140**, the ESE has now been changed to\n",
     "\n",
     "$\\sqrt{\\dfrac{s^{2}_{A}}{n_{A}} + \\dfrac{s^{2}_{B}}{n_{B}}}$."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## About\n",
+    "\n",
+    "The source data was taken from [FootyStats](https://footystats.org/stats) and is concerned with the English Premier League 2018/19 season.\n",
+    "The source data can be found in the `data/in` folder.\n",
+    "The processed data used in this modelling can be found in `data/out/home_advantage.csv`."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -254,13 +261,6 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
