--- a/projects/prem_league/notebooks/1_setup/04-lk-out_global_goal_times.ipynb
+++ b/projects/prem_league/notebooks/1_setup/04-lk-out_global_goal_times.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.4 Constructing data: global_goal_times.csv\n",
+    "# 4. Constructing data: global_goal_times.csv\n",
     "\n",
     "**date**\n",
     ": 2021-04-11\n",
@@ -27,7 +27,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from src.data import Data"
+    "from setup.data import Data"
    ]
   },
   {
@@ -302,9 +302,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python38264bit42cc30f2071844968108c09d90e27cee",
+   "display_name": "Python 3.8.3 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -317,6 +316,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "ff1f241afc5a4c2e07811e38e6858495d05af165b3766e4314a3d7953c54c6af"
+   }
   }
  },
  "nbformat": 4,
