Computer book activities rolling sync

--- a/notebooks-py/a-11-settling-down.ipynb
+++ b/notebooks-py/a-11-settling-down.ipynb
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 2: Normal(0, 1)"
+    "## Example 2: M(1)"
    ]
   },
   {
