--- a/notebooks-py/a-14-quantiles-symbolic-computing.ipynb
+++ b/notebooks-py/a-14-quantiles-symbolic-computing.ipynb
@@ -4,28 +4,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Normal probability plots using `scipy`\n",
+    "# Calculate quantiles of non-standard probability distributions\n",
     "\n",
     "**date**\n",
     ": 2021-04-10\n",
     "\n",
     "**data**\n",
-    ": `plasma.csv`\n",
+    ": -\n",
     "\n",
     "**ref**\n",
-    ": Computer book B, Activity 8\n",
+    ": Computer book A, Activities 44\n",
     "\n",
     "**desc**\n",
-    ": Plot a **normal probability plot** of some data using `scipy.probplot`."
+    ": Calculating quantiles of non-standard probability distributions using `scipy`.\n",
+    "We will use the exponential distribution $M(1)$, where $F(x) = 1 - e^{-x}$, as the illustrative example."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IPython console for SymPy 1.7.1 (Python 3.8.3-64-bit) (ground types: python)\n",
+      "\n",
+      "These commands were executed:\n",
+      ">>> from __future__ import division\n",
+      ">>> from sympy import *\n",
+      ">>> x, y, z, t = symbols('x y z t')\n",
+      ">>> k, m, n = symbols('k m n', integer=True)\n",
+      ">>> f, g, h = symbols('f g h', cls=Function)\n",
+      ">>> init_printing()\n",
+      "\n",
+      "Documentation can be found at https://docs.sympy.org/1.7.1/\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "from scipy.stats import probplot"
+    "from sympy import init_session\n",
+    "from sympy.functions import exp\n",
+    "from scipy.stats import expon\n",
+    "from scipy.integrate import quad\n",
+    "from math import e\n",
+    "\n",
+    "init_session()"
    ]
   },
   {
